--- a/style.css
+++ b/style.css
@@ -38,3 +38,19 @@ footer{
 	margin-bottom: 15px;
 	margin-top: 15px;
 }
+
+nav{
+	margin-left: 15px;
+	margin-right: 15px;
+	margin-bottom: 15px;
+	color: #2d2d30;
+}
+
+.nav-pills:first-child {
+	margin-right: 5px;
+}
+
+nav .nav-pills>li.active>a{
+	background-color: #2d2d30;
+}
+
