added form search by structure

--- a/style.css
+++ b/style.css
@@ -46,11 +46,11 @@ nav{
 	color: #2d2d30;
 }
 
-.nav-pills:first-child {
+nav .nav-pills:first-child {
 	margin-right: 5px;
 }
 
 nav .nav-pills>li.active>a{
-	background-color: #2d2d30;
+	background-color: #2d2d30 !important;
 }
 
